// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toComponent createComponent AngularJS component renders correctly with props 1`] = `
<span
  data-reactroot=""
>
  My 1st Title
</span>
`;

exports[`toComponent createComponent AngularJS component renders correctly with props 2`] = `
<span
  data-reactroot=""
>
  My 2nd Title
</span>
`;

exports[`toComponent createComponent AngularJS component renders correctly without props 1`] = `
<span
  data-reactroot=""
>
  MyComponent
</span>
`;

exports[`toComponent createComponent Controller creates correct WrappedComponent 1`] = `
<span
  className="Decorators-2"
>
  <span
    className="Decorators-1"
  >
    <span>
      MyTitle
    </span>
  </span>
</span>
`;
